--- a/index.html
+++ b/index.html
@@ -10,6 +10,18 @@
 
     <title>Techno Chihab</title>
 
+    <link rel="canonical" href="https://technochihab.github.io/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="format-detection" content="telephone=no">
+    <meta description="Service De Sécurité Informatique à SALE">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://technochihab.github.io">
+    <meta property="og:title" content="TECHNO CHIHAB">
+    <meta property="og:description" content="Service De Sécurité Informatique à SALE">
+    <meta property="og:image" content="https://github.com/TechnoChihab/technochihab.github.io/blob/main/img/bg-1.jpg">
+    <meta property="og:image:width" content="1440">
+    <meta property="og:image:height" content="900">
+
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
